[package]
name = "patrol"
version = "0.3.0"
authors = ["anekos <anekos@snca.net>"]
repository = "https://github.com/anekos/patrol"
keywords = ["linux", "inotify"]
license-file = "LICENSE"
readme = "README.md"
description = "File change notifier"
edition = "2018"

[dependencies]
failure = "*"
inotify = "^0.7"
